// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingData with S3 folders run single query on S3 folder with 2 copies of the same parquet file 1`] = `
Array [
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": "2016-02-03 17:04:03+00",
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": "2016-02-03 17:04:03+00",
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": "2016-02-03 07:55:29+00",
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": "2016-02-03 07:55:29+00",
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": "2016-02-03 01:09:31+00",
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": "2016-02-03 01:09:31+00",
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
]
`;

exports[`boilingdata with DuckDB run all meta queries 1`] = `
Array [
  Array [],
  Array [
    Object {
      "CreationDate": "2021-12-06T12:06:12.060Z",
      "Name": "boilingdata-demo",
    },
  ],
  Array [
    Object {
      "awsAccountId": "589434896614",
      "externalId": "OPL0DcV9pKiQg7/YXxiKQkwOmYQk7wj9FoBS4P7GNI8=",
      "isS3DemoRole": true,
      "s3AccessRoleArn": "arn:aws:iam::589434896614:role/big-table-ws-cli-S3AccessUserRole-SS8E1WW1C7UL",
    },
  ],
  Array [
    Object {
      "pragma": "s3AccessRoleArn='arn:aws:iam::123456789012:role/EXAMPLE';",
    },
  ],
  Array [
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo.parquet",
      "LastModified": "2022-06-18T10:14:03.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"bc1b400cc0ebe3194e1fa6111d09c853-21\\"",
      "Key": "demo.small.parquet",
      "LastModified": "2022-10-26T04:57:14.000Z",
      "Size": 172001116,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo2.parquet",
      "LastModified": "2022-06-18T10:14:24.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"58e27826358dcaf2ce59eb5908f73e89\\"",
      "Key": "taxi_locations.parquet",
      "LastModified": "2023-04-23T13:35:21.000Z",
      "Size": 6168,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"19c7dc463166dd08c931736ad9048a35\\"",
      "Key": "test.parquet",
      "LastModified": "2022-05-23T16:37:00.000Z",
      "Size": 2783,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"425059579ebe794e8260c4f0d2173221\\"",
      "Key": "test2.parquet",
      "LastModified": "2023-02-25T20:41:24.000Z",
      "Size": 2967,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"8784465e8891934e75f37496bdb085ad-8\\"",
      "Key": "test3.parquet",
      "LastModified": "2023-02-25T20:44:07.000Z",
      "Size": 59433136,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"7e6b8ef2dd06e4a0e6e4fa8ba78d0b64-6\\"",
      "Key": "test4.parquet",
      "LastModified": "2023-02-25T20:45:10.000Z",
      "Size": 49619957,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "cc-demo",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "t",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "test_folder",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "test_folder2",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "uploads",
      "Size": 0,
      "StorageClass": "",
    },
  ],
]
`;

exports[`boilingdata with DuckDB run single query (2nd time with cacheHit) 1`] = `
Array [
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-05-03 06:35:41+00",
    "tpep_pickup_datetime": "2019-05-03 06:35:24+00",
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-06-10 10:34:05+00",
    "tpep_pickup_datetime": "2019-06-10 10:32:38+00",
    "trip_distance": 0,
  },
]
`;

exports[`boilingdata with DuckDB run single query 1`] = `
Array [
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-05-03 06:35:41+00",
    "tpep_pickup_datetime": "2019-05-03 06:35:24+00",
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-06-10 10:34:05+00",
    "tpep_pickup_datetime": "2019-06-10 10:32:38+00",
    "trip_distance": 0,
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor (offset) 1`] = `
Array [
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "2/25/1983",
    "cc": "3583136326049310",
    "comments": "",
    "country": "Indonesia",
    "email": "kwhite5@google.com",
    "first_name": "Kathryn",
    "gender": "Female",
    "id": 6,
    "ip_address": "195.131.81.179",
    "last_name": "White",
    "registration_dttm": "2016-02-03 07:22:34+00",
    "salary": 69227.11,
    "title": "Account Executive",
  },
  Object {
    "birthdate": "12/18/1987",
    "cc": "3582641366974690",
    "comments": "",
    "country": "Portugal",
    "email": "sholmes6@foxnews.com",
    "first_name": "Samuel",
    "gender": "Male",
    "id": 7,
    "ip_address": "232.234.81.197",
    "last_name": "Holmes",
    "registration_dttm": "2016-02-03 08:33:08+00",
    "salary": 14247.62,
    "title": "Senior Financial Analyst",
  },
  Object {
    "birthdate": "3/1/1962",
    "cc": "",
    "comments": "",
    "country": "Bosnia and Herzegovina",
    "email": "hhowell7@eepurl.com",
    "first_name": "Harry",
    "gender": "Male",
    "id": 8,
    "ip_address": "91.235.51.73",
    "last_name": "Howell",
    "registration_dttm": "2016-02-03 06:47:06+00",
    "salary": 186469.43,
    "title": "Web Developer IV",
  },
  Object {
    "birthdate": "3/27/1992",
    "cc": "",
    "comments": "1E+02",
    "country": "South Korea",
    "email": "jfoster8@yelp.com",
    "first_name": "Jose",
    "gender": "Male",
    "id": 9,
    "ip_address": "132.31.53.61",
    "last_name": "Foster",
    "registration_dttm": "2016-02-03 03:52:53+00",
    "salary": 231067.84,
    "title": "Software Test Engineer I",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor over the size 1`] = `Array []`;

exports[`boilingdata with promise method can run simple promise based query 1`] = `
Array [
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-05-03 06:35:41+00",
    "tpep_pickup_datetime": "2019-05-03 06:35:24+00",
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 1,
    "PULocationID": 1,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": "2019-06-10 10:34:05+00",
    "tpep_pickup_datetime": "2019-06-10 10:32:38+00",
    "trip_distance": 0,
  },
]
`;
